[package]
name = "qlnk"
version = "0.1.0"
authors = ["Michele Beltrame <mb@italpro.net>"]
license = "MPL-2.0"
readme = "README.md"

[dependencies]
#iron = "0.6.0"
#router = "0.6.0"
#hyper = "0.12.7"
actix = "0.7"
actix-web = "0.7"
serde_json = "1.0.24"
postgres = "0.15"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
lazy_static = "1.0.1"
failure = "0.1.1"

